# gamelytics-ai

./: .gitignore  README.md  architecture.md  progress.md  tech-stack.md
backend/: .gitignore  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0395ad976e7e_add_position_and_role_fields.py  23891b733c83_initial_database_setup_with_summoners_.py  5a8e5a48d478_add_live_game_models.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  champion_mastery.py  live_games.py  matches.py  summoners.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  champion_mastery.py  live_game.py  match.py  summoner.py
backend/app/schemas/: analytics.py  champion_mastery.py  live_game.py  match.py  summoner.py
backend/app/services/: analytics_service.py  build_recommendations_service.py  cache_service.py  champion_data_service.py  champion_mastery_service.py  live_game_service.py  match_service.py  rate_limiter.py  riot_client.py  summoner_service.py
sync-ui/: bun.lockb  package.json  tailwind.config.js  vite.config.ts
sync-ui/src/: main.tsx  routeTree.gen.ts
sync-ui/src-tauri/: Cargo.toml  tauri.conf.json
sync-ui/src-tauri/src/: main.rs
sync-ui/src/components/: ActivityHeatmap.tsx  Analytics.tsx  ChampionMasterySync.tsx  ChampionPool.tsx  Dashboard.tsx  DetailedMatchView.tsx  ErrorBoundary.tsx  LiveGameDetection.tsx  LiveGameOverlay.tsx  MatchCard.tsx  MatchHistory.tsx  OverviewStats.tsx  PrimaryRole.tsx  (+3 more)
(+12 files in other folders)
